--- a/src/css/reset.css
+++ b/src/css/reset.css
@@ -4,7 +4,7 @@
     font-family: "Montserrat", sans-serif;
 }
 body{
-    background-image: url(/src/images/gradient-background.jpg);
+    background-image: url(../images/gradient-background.jpg);
 }
 
 .termos {
