added responsive part, and more choice options

--- a/src/css/reset.css
+++ b/src/css/reset.css
@@ -4,7 +4,8 @@
     font-family: "Montserrat", sans-serif;
 }
 body{
-    background-image: url(../images/temporaly-background.jpg);
+    background-image: url(../images/background.png);
+    background-repeat: no-repeat;
 }
 
 .termos {
