--- a/src/css/reset.css
+++ b/src/css/reset.css
@@ -4,7 +4,7 @@
     font-family: "Montserrat", sans-serif;
 }
 body{
-    background-image: url(../images/background.png);
+    background-image: url(../images/background.jpg);
     background-repeat: no-repeat;
 }
 
@@ -12,6 +12,6 @@ body{
     font-size: smaller;
 }
 
-strong {
+a{
     color: #385898;
 }
