--- a/src/css/style.css
+++ b/src/css/style.css
@@ -83,16 +83,14 @@
     .formulario {
         background-color: white;
         text-align: center;
-        padding: 15px;
         margin: auto;
-        min-width: 400px;
-        max-width: 576px;
+        width: 390px;
         height: 550px;
         position: absolute;
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
-        border-radius: 50px;
+        border-radius: 20px;
     }
 
     .radio {
