I refactored the style.css and the reset.css

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,165 +1,138 @@
+body {
+    background: url(../images/background.jpg) no-repeat;
+}
+
+.container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+}
+
+.area-do-formulario {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: #fff;
+    width: 45rem;
+    border-radius: 1rem;
+}
+
+.introducao {
+    display: flex;
+    position: relative;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    padding: 1rem 1rem;
+}
+
+.introducao img {
+    position: absolute;
+    right: 1rem;
+}
+
+.area-do-formulario .titulo {
+    font-size: 3.5rem;
+}
+
+.area-do-formulario .texto {
+    font-size: 1.5rem;
+    color: #606770;
+}
+
+hr {
+    width: 100%;
+}
+
 .formulario {
-    background-color: white;
-    text-align: center;
-    padding: 15px;
-    margin: auto;
-    width: 420px;
-    height: auto;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    border-radius: 50px;
+    display: flex;
+    flex-direction: column;
+    padding: 1.6rem;
+    font-size: 1.6rem;
 }
 
-.dados-usuario {
-    padding: 10px 5px;
-    border: solid 2px #dcdee0;
-    border-radius: 5px;
-    font-weight: normal;
-    margin: 5px;
+.formulario .area-nome-completo {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
 }
 
-.botao-cadastro {
-    background-color: #00A400;
-    border-radius: 5px;
-    padding: 10px 20px;
-    font-size: large;
-    font-weight: bold;
-    color: white;
-    font-family: "Montserrat", sans-serif;
+.formulario .area-nome-completo .area {
+    width: 19.4rem;
 }
 
-.botao-cadastro:hover {
-    background-color: rgb(62, 131, 45);
+.formulario .info {
+    background-color: #F5F6F7;
+    padding: 1rem;
+    margin: 0.5rem;
+    font-size: 1.6rem;
+    border: 1px solid #ccd0d5;
+    border-radius: 0.5rem;
+}
+
+.formulario .label {
+    font-size: 1.2rem;
+    padding: 0.8rem 1rem;
+}
+
+.formulario .data-de-nascimento {
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.formulario .data-info {
+    width: 12.5rem;
+    height: 3.6rem;
+    font-size: 1.5rem;
+    border: 1px solid #ccd0d5;
+    border-radius: 0.5rem;
+}
+
+.formulario .genero {
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.formulario .genero .feminino,
+.masculino,
+.personalizado {
+    border: 1px solid #ccd0d5;
+    padding: 1rem;
+    border-radius: 0.5rem;
+}
+
+.area-botao {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-top: 2rem;
+}
+
+.area-botao .btn {
     cursor: pointer;
+    font-size: 1.8rem;
+    font-weight: 700;
+    border-radius: 0.6rem;
+    width: 19.4rem;
+    height: 3.6rem;
+    background-color: #00a400;
+    color: white;
+    border-style: none;
+    padding: 0 3.2rem;
 }
 
-.radio {
-    display: inline-block;
-    padding: 5px;
-    border: solid 2px #dcdee0;
-    border-radius: 5px;
-    font-size: 15px;
-    font-weight: normal;
-    margin: 0 5px;
+.area-botao .btn:hover {
+    background-color: rgb(62, 131, 45);
 }
 
-.radio::marker {
-    background-color: blue;
-    color: blue;
+.termos {
+    padding-top: 1rem;
+    text-align: center;
+    font-size: 1.1rem;
 }
 
-.select-data-de-nascimento {
-    display: inline-block;
-    padding: 5px;
-    border: solid 2px #dcdee0;
-    background-color: transparent;
-    border-radius: 5px;
-    font-size: 15px;
-    font-weight: normal;
-    margin: 0 5px;
-    padding: 0 30px;
-    height: 30px;
-    line-height: 20px;
-}
-
-.descricao-de-area {
-    padding-bottom: 5px;
-    display: block;
-    text-align: left;
-    font-size: 12px;
-    font-weight: normal;
-}
-
-.fa-xmark {
-    position: absolute;
-    margin-left: 175px;
-    height: 40px;
-    color: black;
-}
-
-@media (max-width: 768px) {
-    .formulario {
-        background-color: rgb(255, 255, 255);
-        text-align: center;
-        margin: auto;
-        width: 386px;
-        height: 490px;
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        border-radius: 20px;
-    }
-
-    .radio {
-        display: inline-block;
-        padding: 0 10px;
-        border: solid 2px #dcdee0;
-        border-radius: 5px;
-        font-size: 15px;
-        font-weight: normal;
-        margin: 0 10px;
-    }
-
-    .dados-usuario {
-        padding: 5px;
-        border: solid 2px #dcdee0;
-        border-radius: 5px;
-        font-weight: normal;
-        margin: 3px;
-        width: 170px;
-    }
-}
-
-@media (max-width: 576px) {
-    .formulario {
-        background-color: rgb(255, 255, 255);
-        text-align: center;
-        margin: auto;
-        width: 400px;
-        height: 540px;
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        border-radius: 20px;
-    }
-
-    .radio {
-        display: inline;
-        padding: 5px;
-        border: solid 2px #dcdee0;
-        border-radius: 5px;
-        font-size: smaller;
-        margin: 3px;
-    }
-
-    .dados-usuario {
-        padding: 10px 5px;
-        border: solid 2px #dcdee0;
-        border-radius: 5px;
-        font-weight: normal;
-        margin: 5px;
-    }
-
-    .select-data-de-nascimento {
-        display: inline-block;
-        padding: 5px;
-        border: solid 2px #dcdee0;
-        background-color: transparent;
-        border-radius: 5px;
-        font-size: 15px;
-        font-weight: normal;
-        margin: 0 5px;
-        padding: 0 15px;
-        height: 30px;
-        line-height: 10px;
-    }
-
-    .fa-xmark {
-        position: absolute;
-        right: 10px;
-    }
+.termos a {
+    color: #385898;
 }
