--- a/src/css/reset.css
+++ b/src/css/reset.css
@@ -1,17 +1,10 @@
-@import url('https://fonts.googleapis.com/css2?family=Fira+Code:wght@300;400;500;600;700&family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=VT323&display=swap');
+html {
+    font-size: 62.5%;
+}
 
 * {
-    font-family: "Montserrat", sans-serif;
-}
-body{
-    background-image: url(../images/background.jpg);
-    background-repeat: no-repeat;
-}
-
-.termos {
-    font-size: smaller;
-}
-
-a{
-    color: #385898;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Roboto', sans-serif;
 }
