✨ feat: add status styles for success and error messages

--- a/src/styles/global/reset.css
+++ b/src/styles/global/reset.css
@@ -21,3 +21,16 @@ a,
 a:active {
   color: #0056b3;
 }
+
+.status {
+  font-size: 1.6rem;
+  text-align: center;
+}
+
+.status.success {
+  color: green;
+}
+
+.status.error {
+  color: red;
+}
